--- a/src/app/components/get-input/get-input.component.html
+++ b/src/app/components/get-input/get-input.component.html
@@ -16,7 +16,7 @@
       <button
         class="btn btn-primary add-btn"
         type="submit"
-        [disabled]="enableInput()"
+        [disabled]="enableAddBtn()"
       >
         Add to list
       </button>
